parser/hassil/grammar/HassILGrammarParser.py
# Generated from HassILGrammar.g4 by ANTLR 4.11.1
# encoding: utf-8
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO




class HassILGrammarParser(Parser):

    grammarFileName = "HassILGrammar.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "'('",
        "')'",
        "'['",
        "']'",
        "'|'",
        "'{'",
        "'}'",
        "'<'",
        "'>'",
    ]

    symbolicNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "STRING",
        "QUOTED_STRING",
        "QUOTED_ESC",
        "UNQUOTED_STRING",
        "UNQUOTED_ESC",
        "CHARACTER",
        "EOL",
        "WS",
    ]

    RULE_document = 0
    RULE_sentence = 1
    RULE_expression = 2
    RULE_group = 3
    RULE_optional = 4
    RULE_alt = 5
    RULE_word = 6
    RULE_prefix = 7
    RULE_suffix = 8
    RULE_list = 9
    RULE_list_name = 10
    RULE_rule = 11
    RULE_rule_name = 12

    ruleNames = [
        "document",
        "sentence",
        "expression",
        "group",
        "optional",
        "alt",
        "word",
        "prefix",
        "suffix",
        "list",
        "list_name",
        "rule",
        "rule_name",
    ]

    EOF = Token.EOF
    T__0 = 1
    T__1 = 2
    T__2 = 3
    T__3 = 4
    T__4 = 5
    T__5 = 6
    T__6 = 7
    T__7 = 8
    T__8 = 9
    STRING = 10
    QUOTED_STRING = 11
    QUOTED_ESC = 12
    UNQUOTED_STRING = 13
    UNQUOTED_ESC = 14
    CHARACTER = 15
    EOL = 16
    WS = 17

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class DocumentContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentence(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(HassILGrammarParser.SentenceContext)
            else:
                return self.getTypedRuleContext(HassILGrammarParser.SentenceContext, i)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_document

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterDocument"):
                listener.enterDocument(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitDocument"):
                listener.exitDocument(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitDocument"):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)

    def document(self):

        localctx = HassILGrammarParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 27
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self.sentence()
                self.state = 29
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (((_la) & ~0x3F) == 0 and ((1 << _la) & 1354) != 0):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SentenceContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HassILGrammarParser.ExpressionContext, 0)

        def EOL(self):
            return self.getToken(HassILGrammarParser.EOL, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_sentence

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSentence"):
                listener.enterSentence(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSentence"):
                listener.exitSentence(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSentence"):
                return visitor.visitSentence(self)
            else:
                return visitor.visitChildren(self)

    def sentence(self):

        localctx = HassILGrammarParser.SentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.expression()
            self.state = 32
            self.match(HassILGrammarParser.EOL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExpressionContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def group(self):
            return self.getTypedRuleContext(HassILGrammarParser.GroupContext, 0)

        def optional(self):
            return self.getTypedRuleContext(HassILGrammarParser.OptionalContext, 0)

        def word(self):
            return self.getTypedRuleContext(HassILGrammarParser.WordContext, 0)

        def list_(self):
            return self.getTypedRuleContext(HassILGrammarParser.ListContext, 0)

        def rule_(self):
            return self.getTypedRuleContext(HassILGrammarParser.RuleContext, 0)

        def expression(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(HassILGrammarParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(
                    HassILGrammarParser.ExpressionContext, i
                )

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(HassILGrammarParser.WS)
            else:
                return self.getToken(HassILGrammarParser.WS, i)

        def alt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(HassILGrammarParser.AltContext)
            else:
                return self.getTypedRuleContext(HassILGrammarParser.AltContext, i)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_expression

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterExpression"):
                listener.enterExpression(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitExpression"):
                listener.exitExpression(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitExpression"):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)

    def expression(self):

        localctx = HassILGrammarParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 1, self._ctx)
            if la_ == 1:
                self.state = 34
                self.group()
                pass

            elif la_ == 2:
                self.state = 35
                self.optional()
                pass

            elif la_ == 3:
                self.state = 36
                self.word()
                pass

            elif la_ == 4:
                self.state = 37
                self.list_()
                pass

            elif la_ == 5:
                self.state = 38
                self.rule_()
                pass

            self.state = 48
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)
            while _alt != 2 and _alt != ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 43
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input, 2, self._ctx)
                    if la_ == 1:
                        self.state = 41
                        self.match(HassILGrammarParser.WS)
                        pass

                    elif la_ == 2:
                        self.state = 42
                        self.alt()
                        pass

                    self.state = 45
                    self.expression()
                self.state = 50
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input, 3, self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GroupContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HassILGrammarParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_group

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterGroup"):
                listener.enterGroup(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitGroup"):
                listener.exitGroup(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitGroup"):
                return visitor.visitGroup(self)
            else:
                return visitor.visitChildren(self)

    def group(self):

        localctx = HassILGrammarParser.GroupContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_group)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(HassILGrammarParser.T__0)
            self.state = 52
            self.expression()
            self.state = 53
            self.match(HassILGrammarParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class OptionalContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(HassILGrammarParser.ExpressionContext, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_optional

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterOptional"):
                listener.enterOptional(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitOptional"):
                listener.exitOptional(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitOptional"):
                return visitor.visitOptional(self)
            else:
                return visitor.visitChildren(self)

    def optional(self):

        localctx = HassILGrammarParser.OptionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_optional)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(HassILGrammarParser.T__2)
            self.state = 56
            self.expression()
            self.state = 57
            self.match(HassILGrammarParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AltContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WS(self, i: int = None):
            if i is None:
                return self.getTokens(HassILGrammarParser.WS)
            else:
                return self.getToken(HassILGrammarParser.WS, i)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_alt

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterAlt"):
                listener.enterAlt(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitAlt"):
                listener.exitAlt(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitAlt"):
                return visitor.visitAlt(self)
            else:
                return visitor.visitChildren(self)

    def alt(self):

        localctx = HassILGrammarParser.AltContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_alt)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 17:
                self.state = 59
                self.match(HassILGrammarParser.WS)

            self.state = 62
            self.match(HassILGrammarParser.T__4)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 17:
                self.state = 63
                self.match(HassILGrammarParser.WS)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class WordContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HassILGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_word

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterWord"):
                listener.enterWord(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitWord"):
                listener.exitWord(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitWord"):
                return visitor.visitWord(self)
            else:
                return visitor.visitChildren(self)

    def word(self):

        localctx = HassILGrammarParser.WordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_word)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(HassILGrammarParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PrefixContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HassILGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_prefix

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterPrefix"):
                listener.enterPrefix(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitPrefix"):
                listener.exitPrefix(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitPrefix"):
                return visitor.visitPrefix(self)
            else:
                return visitor.visitChildren(self)

    def prefix(self):

        localctx = HassILGrammarParser.PrefixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_prefix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(HassILGrammarParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SuffixContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HassILGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_suffix

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterSuffix"):
                listener.enterSuffix(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitSuffix"):
                listener.exitSuffix(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitSuffix"):
                return visitor.visitSuffix(self)
            else:
                return visitor.visitChildren(self)

    def suffix(self):

        localctx = HassILGrammarParser.SuffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_suffix)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(HassILGrammarParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def list_name(self):
            return self.getTypedRuleContext(HassILGrammarParser.List_nameContext, 0)

        def prefix(self):
            return self.getTypedRuleContext(HassILGrammarParser.PrefixContext, 0)

        def suffix(self):
            return self.getTypedRuleContext(HassILGrammarParser.SuffixContext, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_list

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterList"):
                listener.enterList(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitList"):
                listener.exitList(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitList"):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)

    def list_(self):

        localctx = HassILGrammarParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_list)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 73
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 10:
                self.state = 72
                self.prefix()

            self.state = 75
            self.match(HassILGrammarParser.T__5)
            self.state = 76
            self.list_name()
            self.state = 77
            self.match(HassILGrammarParser.T__6)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la == 10:
                self.state = 78
                self.suffix()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class List_nameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HassILGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_list_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterList_name"):
                listener.enterList_name(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitList_name"):
                listener.exitList_name(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitList_name"):
                return visitor.visitList_name(self)
            else:
                return visitor.visitChildren(self)

    def list_name(self):

        localctx = HassILGrammarParser.List_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_list_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(HassILGrammarParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RuleContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rule_name(self):
            return self.getTypedRuleContext(HassILGrammarParser.Rule_nameContext, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_rule

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRule"):
                listener.enterRule(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRule"):
                listener.exitRule(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRule"):
                return visitor.visitRule(self)
            else:
                return visitor.visitChildren(self)

    def rule_(self):

        localctx = HassILGrammarParser.RuleContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_rule)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(HassILGrammarParser.T__7)
            self.state = 84
            self.rule_name()
            self.state = 85
            self.match(HassILGrammarParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Rule_nameContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(HassILGrammarParser.STRING, 0)

        def getRuleIndex(self):
            return HassILGrammarParser.RULE_rule_name

        def enterRule(self, listener: ParseTreeListener):
            if hasattr(listener, "enterRule_name"):
                listener.enterRule_name(self)

        def exitRule(self, listener: ParseTreeListener):
            if hasattr(listener, "exitRule_name"):
                listener.exitRule_name(self)

        def accept(self, visitor: ParseTreeVisitor):
            if hasattr(visitor, "visitRule_name"):
                return visitor.visitRule_name(self)
            else:
                return visitor.visitChildren(self)

    def rule_name(self):

        localctx = HassILGrammarParser.Rule_nameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_rule_name)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(HassILGrammarParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx
